--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@
     margin: 0px;
 } */
 
+a {
+  text-decoration: none;
+  color:  black;
+}
+.content {
+  padding-top: 150px;
+}
+
+footer {
+  padding-top: 100px;
+}
 a.nav-link {
   color: black;
   white-space: nowrap;
@@ -26,9 +37,6 @@ input#exampleInputPassword1 {
 }
 
 
-.slide {
-  padding-top: 100px;
-}
 
 .d-flex.justify-content-around {
   background-color: white;
@@ -37,3 +45,5 @@ input#exampleInputPassword1 {
 header.row.navbar.fixed-top {
   padding-top: 0px !important;
 }
+
+
