--- a/src/style.css
+++ b/src/style.css
@@ -46,4 +46,9 @@ header.row.navbar.fixed-top {
   padding-top: 0px !important;
 }
 
+.numberCart {
+  padding: 3px;
+  border: 2px solid black;
+  border-radius: 50%;
+}
 
