--- a/src/style.css
+++ b/src/style.css
@@ -73,3 +73,38 @@ header.row.navbar.fixed-top {
 .show_menu {
   display: none;
 }
+
+.dropdown-shop {
+display: none;
+}
+
+
+.menu-item-category:hover .dropdown-shop {
+  display: block;
+  position: absolute;
+  top: 70%;
+  left: 0;
+  z-index: 1000;
+  float: left;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  box-sizing: border-box;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
+  /* padding: 0.5rem 0; */
+  margin: 0.125rem 0 0;
+  padding-left: 20px;
+}
+Link {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+}
