--- a/src/component/Search/style.css
+++ b/src/component/Search/style.css
@@ -17,7 +17,7 @@
     left: 5%;
     z-index: 1000;
     float: left;
-    min-width: 100%;
+    width: 100%;
     padding: 0.5rem 0;
     box-sizing: border-box;
     font-size: 1rem;
