--- a/src/views/Header/style.css
+++ b/src/views/Header/style.css
@@ -1,3 +1,23 @@
+.text-name a {
+  text-decoration: none;
+  color: black;
+}
+
+.shopping-cart a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: #337ab7;
+}
+
+.show_menu a {
+  text-decoration: none;
+  color: black;
+}
+
+
 .d-flex.justify-content-around {
     background-color: white;
   }
