--- a/src/views/Header/style.css
+++ b/src/views/Header/style.css
@@ -1,4 +1,4 @@
-.text-name a {
+/* .text-name a {
   text-decoration: none;
   color: black;
 }
@@ -88,7 +88,6 @@ a:hover {
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 0.25rem;
-    /* padding: 0.5rem 0; */
     margin: 0.125rem 0 0;
     padding-left: 20px;
   }
@@ -123,14 +122,13 @@ a:hover {
       vertical-align: top;
       margin-left: -10px; 
   }
-  /* header{
-    opacity: 0,9 !important;
-    filter: alpha(opacity=50);
-  } */
+
 
  .fa-shopping-cart:hover {
    color: #337ab7 !important;
  }
  .nav-link:hover{
    color: #337ab7 !important;
- }
+ } */
+
+ 
