--- a/src/component/Search/style.css
+++ b/src/component/Search/style.css
@@ -1,8 +1,16 @@
 .name {
-    white-space: nowrap;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  display: block;
+  display: -webkit-box;
+  max-width: 150px;
+  height: 16px*1.3*3; /* Fallback for non-webkit */
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #fff;
   }
   input.search_bar.form-control input[type="text"]  {
     width: 60%;
@@ -10,19 +18,29 @@
     transition: width 0.4s ease-in-out;
   }
 
+  .search-client {
+    position: relative;
+  }
+  .search-img img {
+    width: 60px;
+  }
+  .search {
+    display: flex;
+    justify-content: space-between;
+  }
   
   .box {
     position: absolute;
-    top: 100%;
-    left: 5%;
+    top: 80%;
+    left: 0%;
     z-index: 1000;
     float: left;
-    width: 100%;
-    padding: 0.5rem 0;
+    /* width: 100%; */
+    padding: 20px;
     box-sizing: border-box;
     font-size: 1rem;
     text-align: left;
-    background-color: #fff;
+    background-color: #cac8c8;
     border-radius: 0.25rem;
     padding: 0.5rem 0;
     margin: 0.125rem 0 0;
