--- a/src/style.css
+++ b/src/style.css
@@ -70,8 +70,30 @@ body {
   transition: background 0.5s;
   border: none;
 }
+.btn-danger {
+  display: inline-block;
+  background: #aa0c19;
+  color: #fff;
+  padding: 12px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
+  border: none;
+}
+.btn-primary {
+  display: inline-block;
+  background: #17cf4e;
+  color: #fff;
+  padding: 12px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
+  border: none;
+}
+
 .btn:hover {
-  background-color: #563434;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 
@@ -888,7 +910,7 @@ td input {
   padding: 5px;
 }
 td a {
-  color :#ff523b;
+  /* color :#ff523b; */
   font-size: 12px;
 }
 
@@ -997,6 +1019,12 @@ textarea {
 }
 .payment {
   margin-top: 200px;
+}
+.form-product {
+  margin: 30px;
+}
+.order-text {
+  text-align: center;
 }
 
 
@@ -1436,5 +1464,15 @@ tbody tr:nth-child(even) {
         padding-left: 1rem;
         padding-right: 1rem;
     }
+}
+
+
+.list-product__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search_bar {
+  padding: 8px;
 }
 
